kubernetes/test/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:                # Ограничение ресурсов
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
        livenessProbe:            # Проверка здоровья контейнера
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5  # Подождать 5 секунд после старта
          periodSeconds: 10       # Проверять каждые 10 секунд
        ports:
        - containerPort: 80
        # 1. Куда подключаем внутри контейнера
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: storage-volume      # Монтируем наш диск внутрь контейнера
          mountPath: /var/log/nginx # Папка с логами nginx внутри контейнера
      # 2. Какую "флешку" берем
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html-config
      - name: storage-volume      # Подключение PersistentVolumeClaim
        persistentVolumeClaim:
          claimName: nginx-pvc    # Имя нашей заявки на диск
